syntax = "proto3";
import "athenaapis/structures.proto";

option java_multiple_files = true;
option java_package = "com.athena.api.service";

package LotService;

service LotService{
  rpc Cancel(TransitionLotRequest)returns(structures.Lot){}
  rpc Close(TransitionLotRequest)returns(structures.Lot){}
  rpc Finish(TransitionLotRequest)returns(structures.Lot){}
  rpc Hold(TransitionLotRequest)returns(structures.Lot){}
  rpc Pause(TransitionLotRequest)returns(structures.Lot){}
  rpc Quarantine(TransitionLotRequest)returns(structures.Lot){}
  rpc Release(TransitionLotRequest)returns(structures.Lot){}
  rpc Ship(TransitionLotRequest)returns(structures.Lot){}
  rpc Scrap(TransitionLotRequest)returns(structures.Lot){}
  rpc UndoClose(TransitionLotRequest)returns(structures.Lot){}
  rpc UndoFinish(TransitionLotRequest)returns(structures.Lot){}
  rpc UndoScrap(TransitionLotRequest)returns(structures.Lot){}
  rpc UndoShip(TransitionLotRequest)returns(structures.Lot){}
  rpc Serialize(TransitionLotRequest)returns(structures.Lot){}
  rpc UndoSerialize(TransitionLotRequest)returns(structures.Lot){}
  rpc AddOneUnit(AddOneUnitRequest)returns(AddUnitResponse){}
  rpc AddToQueue(AddLotToQueueRequest) returns(structures.Lot){}
  rpc ChangeBom(LotChangeBomRequest)returns(structures.Lot){}
  rpc ChangeBomFromPart(LotChangeBomFromPartRequest)returns(structures.Lot){}
  rpc ChangePart(LotChangePartRequest)returns(structures.Lot){}
  rpc ChangePartOnly(LotChangePartRequest)returns(structures.Lot){}
  rpc ChangePriority(structures.ChangePriorityRequest)returns(structures.Lot){}
  rpc ChangeProductionLine(LotChangeProductionLineRequest)returns(structures.Lot){}
  rpc ChangeRoute(LotChangeRouteRequest)returns(structures.Lot){}
  rpc ChangeQuantity(LotChangeQuantityRequest)returns(structures.Lot){}
  rpc SplitLot(SplitLotRequest)returns(SplitLotResponse){}
  rpc CompleteAtRouteStep(LotCompleteAtRouteStepRequest)returns(structures.Lot){}
  rpc StartAtRouteStep(LotStartAtRouteStepRequest)returns(structures.Lot){}
  rpc MergeUnit(MergeUnitRequest)returns(structures.Lot){}
  rpc MergeLot(MergeLotRequest)returns(stream structures.Lot){}
}


message AddUnitResponse{
  structures.Lot lot = 1;
  repeated structures.Unit units = 2;
  structures.WorkOrder order = 3;
}

message MergeLotRequest{
  uint64 parent_lot_id = 1;
  uint64 child_lot_id = 2;
  string comment = 3;
  google.protobuf.Timestamp transaction_time = 4;
}

message MergeUnitRequest{
  uint64 lot_id = 1;
  uint64 unit_id = 2;
  string comment = 3;
  google.protobuf.Timestamp transaction_time = 4;
}

message LotStartAtRouteStepRequest{
  uint64 lot_id = 1;
  string route_step_number = 2;
  string comment = 3;
  google.protobuf.Timestamp transaction_time = 4;
  bool override_route_enforcement = 5;
}
message LotCompleteAtRouteStepRequest{
  uint64 lot_id = 1;
  string route_step_number = 2;
  string comment = 3;
  google.protobuf.Timestamp transaction_time = 4;
  bool override_route_enforcement = 5;
  string complete_reason = 6;
}

message SplitLotRequest{
  uint64 parent_lot_id = 1;
  string child_lot_serial_number = 2;
  double child_lot_quantity = 3;
  string comment = 4;
  google.protobuf.Timestamp transaction_time = 5;
}

message SplitLotResponse{
  repeated structures.Lot lots = 1;
}

enum TransitionLotState{
  LotClose = 0;
  LotFinish = 1;
  LotHold = 2;
  LotOpen = 3;
  LotQuarantine = 4;
  LotRelease = 5;
  LotShip = 6;
  LotUndoClose = 7;
  LotUndoShip = 8;
  LotUndoFinish = 9;
  LotScrap = 10;
  LotUndoScrap = 11;
  LotCancle = 12;
  LotSerialize = 13;
  LotUndoSerialize = 14;
}

message TransitionLotRequest{
  uint64 lot_id = 1;
  string reason = 2;
  string comment = 3;
  google.protobuf.Timestamp timestamp = 4;
  TransitionLotState transitionState = 5;
  bool override_route_enforcement = 6;
}

message LotChangeQuantityRequest{
  uint64 lot_id = 1;
  double quantity = 2;
  string comment = 3;
  google.protobuf.Timestamp transaction_time = 4;
}

message LotChangeRouteRequest{
  uint64 lot_id = 1;
  uint64 new_route_id = 2;
  bool force_change_route = 3;
  string comment = 4;
  google.protobuf.Timestamp transaction_time = 5;
}

message LotChangeProductionLineRequest{
  uint64 lot_id = 1;
  uint64 new_production_line_id = 2;
  string comment = 3;
  google.protobuf.Timestamp transaction_time = 4;
}


message LotChangePartRequest{
  uint64 lot_id = 1;
  string part_number = 2;
  string part_revision = 3;
  string comment = 4;
  google.protobuf.Timestamp transaction_time = 5;
}


message LotChangeBomRequest{
  uint64 lot_id = 1;
  string bom_name = 2;
  string bom_revision = 3;
  string comment = 4;
  google.protobuf.Timestamp transaction_time = 5;
}

message LotChangeBomFromPartRequest{
  uint64 lot_id = 1;
  string part_number = 2;
  string part_revision = 3;
  structures.Bom bom = 4;
  string comment = 5;
  google.protobuf.Timestamp transaction_time = 6;
}

message AddOneUnitRequest{
  uint64 lot_id = 1;
  string unit_serial_number = 2;
  string comment = 3;
  google.protobuf.Timestamp transaction_time = 4;
}

message AddLotToQueueRequest{
  uint64 lot_id = 1;
  string route_queue_name = 2;
  string comment = 3;
  google.protobuf.Timestamp transaction_time = 4;
}
