// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
import "athenaapis/dto.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/athena-intelli/athena/api/pb/objectStorage;objectStorage";
option java_multiple_files = true;
option java_package = "com.athena.api.service";

package ObjectStorageService;

// The ObjectStorage definition.
service ObjectStorageService {
  rpc RemoveEquipment (RemoveObjectRequest) returns (google.protobuf.Empty) {}
  rpc RemoveLocation (RemoveObjectRequest) returns (google.protobuf.Empty) {}
  rpc RemoveBOM (RemoveObjectRequest) returns (google.protobuf.Empty) {}
  rpc RemovePart (RemoveObjectRequest) returns (google.protobuf.Empty) {}
  rpc RemoveProductionLine (RemoveObjectRequest) returns (google.protobuf.Empty) {}
  rpc RemoveProductionQueue (RemoveObjectRequest) returns (google.protobuf.Empty) {}
  rpc RemoveRoute (RemoveObjectRequest) returns (google.protobuf.Empty) {}
  rpc RemoveRouteOperation (RemoveObjectRequest) returns (google.protobuf.Empty) {}
  rpc RemoveStation (RemoveObjectRequest) returns (google.protobuf.Empty) {}
  rpc RemoveWorkshop (RemoveObjectRequest) returns (google.protobuf.Empty) {}

  rpc ChangeProductionLinePriority(dto.ChangePriorityRequest)returns(dto.DProductionLine){}
  rpc ChangeEquipmentPriority(dto.ChangePriorityRequest)returns(dto.DEquipment){}

  rpc SaveUser (dto.DUser) returns (dto.DUser) {}
  rpc SaveBom (dto.DBom) returns (dto.DBom) {}
  rpc SaveRuntimeBom (dto.DRuntimeBom) returns (dto.DRuntimeBom) {}
  rpc SaveEquipment (dto.DEquipment) returns (dto.DEquipment) {}
  rpc SaveWorkshop (dto.DWorkshop) returns (dto.DWorkshop) {}
  rpc SaveFactory (dto.DFactory) returns (dto.DFactory) {}
  rpc SaveShift (dto.DShift) returns (dto.DShift) {}
  rpc SaveWorkStation (dto.DWorkStation) returns (dto.DWorkStation) {}
  rpc SaveEquipmentClass (dto.DEquipmentClass) returns (dto.DEquipmentClass) {}
  rpc SavePartClass (dto.DPartClass) returns (dto.DPartClass) {}
  rpc SavePart (dto.DPart) returns (dto.DPart) {}
  rpc SaveLocation (dto.DLocation) returns (dto.DLocation) {}
  rpc SaveRoute (dto.DRoute) returns (dto.DRoute) {}
  rpc SaveRouteOperation (dto.DRouteOperation) returns (dto.DRouteOperation) {}
  rpc SaveEADefinition(dto.DEADefinition)returns(dto.DEADefinition){}
  rpc SaveDoc(dto.DDoc)returns(dto.DDoc){}
  rpc SaveCustomer(dto.DCustomer)returns(dto.DCustomer){}
  rpc SaveSupplier(dto.DSupplier)returns(dto.DSupplier){}
}

message RemoveObjectRequest {
  uint64 id = 1;
  string comment = 2;
  google.protobuf.Timestamp transaction_time = 3;
}



